--- a/index.html
+++ b/index.html
@@ -10,92 +10,32 @@
     <title>FeedMe!</title>
   </head>
   <body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="food">
-                    
-                </div>
-            </div>
-        </div>
+    <div class="container">        
         <div class="row">
             <div class="col-12">
-                <h5>Hello, Selamat Datang di <strong>FeedMe.</strong></h5>
+                <h5>Hello, Selamat Datang <strong>Nama Akun</strong> di <strong>FeedMe.</strong></h5>
                 <h6>Mau pesan apa kak ?</h6>
             </div>
         </div>
         <div class="row mt-2">
             <div class="col-12">
                 <h2><strong>Food</strong></h2>
-                <div class="row d-flex align-items-center">
-                    <div class="col-6">
-                        <h4>Soto Ayam</h4>
-                        <p>13.000</p>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end align-items-center">
-                        <a href="#" class="btn btn-primary">-</a>
-                        <span class="mx-2">5</span>
-                        <a href="#" class="btn btn-warning">+</a>
-                    </div>
-                </div>
-                <div class="row d-flex align-items-center">
-                    <div class="col-6">
-                        <h4>Nasi Goreng</h4>
-                        <p>15.000</p>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end align-items-center">
-                        <a href="#" class="btn btn-primary">-</a>
-                        <span class="mx-2">5</span>
-                        <a href="#" class="btn btn-warning">+</a>
-                    </div>
-                </div>
-                <div class="row d-flex align-items-center">
-                    <div class="col-6">
-                        <h4>Bakso</h4>
-                        <p>12.000</p>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end align-items-center">
-                        <a href="#" class="btn btn-primary">-</a>
-                        <span class="mx-2">5</span>
-                        <a href="#" class="btn btn-warning">+</a>
-                    </div>
-                </div>
+                <div class="food-container"></div>
             </div>
             <div class="col-12">
                 <h2><strong>Drink</strong></h2>
-                <div class="row d-flex align-items-center">
-                    <div class="col-6">
-                        <h4>Teh Es</h4>
-                        <p>5000</p>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end align-items-center">
-                        <a href="#" class="btn btn-primary">+</a>
-                        <span class="mx-2">5</span>
-                        <a href="#" class="btn btn-warning">+</a>
-                    </div>
-                </div>
-                <div class="row d-flex align-items-center">
-                    <div class="col-6">
-                        <h4>Jeruk Anget / Dingin</h4>
-                        <p>6000</p>
-                    </div>
-                    <div class="col-6 d-flex justify-content-end align-items-center">
-                        <a href="#" class="btn btn-primary">+</a>
-                        <span class="mx-2">5</span>
-                        <a href="#" class="btn btn-warning">+</a>
-                    </div>
-                </div>
+                <div class="drink-container"></div>
             </div>
         </div>
         <hr>
         <div class="row justify-content-center align-items-center">
             <div class="col-6 ">
                 <h5>Ringkasan</h5>
-                <p>Pesanan : 2 Makanan dan 1 Minuman</p>
+                <p>Pesanan : <strong><span class="sum-order-food"></span></strong> Makanan dan <strong><span class="sum-order-drink"></span></strong> Minuman</p>
             </div>
             <div class="col-6 d-flex justify-content-end flex-column align-items-end">
-                <p>Harga : 24.000</p>
-                <a href="" class="btn btn-primary btn-lg">Order</a>
+                <p>Total : <span class="sum-of-price">Harga : 24.000</span></p>
+                <a href="" class="btn btn-danger btn-lg">Order</a>
             </div>
         </div>
         <div class="row">
@@ -111,5 +51,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+    <script src="liff-starter.js"></script>
   </body>
 </html>
