--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="col-6 d-flex justify-content-end flex-column align-items-end">
                 <p>Total : <span class="sum-of-price">Harga : 24.000</span></p>
-                <a href="" class="btn btn-danger btn-lg">Order</a>
+                <button id="sendMessageButton" class="btn btn-danger btn-lg">Order</button>
             </div>
         </div>
         <div class="row">
