Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 <p>Pesanan : <strong><span class="sum-order-food"></span></strong> Makanan dan <strong><span class="sum-order-drink"></span></strong> Minuman</p>
             </div>
             <div class="col-6 d-flex justify-content-end flex-column align-items-end">
-                <p>Total : <span class="sum-of-price">Harga : 24.000</span></p>
+                <p>Total : <span class="sum-of-price"></span></p>
                 <button id="sendMessageButton" class="btn btn-danger btn-lg">Order</button>
             </div>
         </div>
         <div class="row">
             <div class="col-12 text-center">
-                <a href="">Buka di browser</a>
+                <button id="openWindowButton">Buka di browser</button>
             </div>
         </div>
     </div>
