Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="row">
             <div class="col-12 text-center">
-                <button id="openWindowButton">Buka di browser</button>
+                <button id="openWindowButton" class="btn btn-outline-primary">Buka di browser</button>
             </div>
         </div>
     </div>
