Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">        
         <div class="row">
             <div class="col-12">
-                <h5>Hello, Selamat Datang <strong>Nama Akun</strong> di <strong>FeedMe.</strong></h5>
+                <h5>Hello, Selamat Datang <strong id="username">Nama Akun</strong> di <strong>FeedMe.</strong></h5>
                 <h6>Mau pesan apa kak ?</h6>
             </div>
         </div>
