Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="container">        
         <div class="row">
             <div class="col-12">
+                <div id="profilePictureDiv">
+                </div>
                 <h5>Hello, Selamat Datang <strong id="username">Nama Akun</strong> di <strong>FeedMe.</strong></h5>
                 <h6>Mau pesan apa kak ?</h6>
             </div>
