Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
     <title>FeedMe!</title>
   </head>
   <body>
     <div class="container">        
         <div class="row">
             <div class="col-12">
-                <div id="profilePictureDiv">
+                <div class="row">
+                    <div class="col-3">
+                        <div id="profilePictureDiv">
+                    </div>
+                    <div class="col-9">
+                        <strong id="username"></strong>
+                    </div>
+                </div>
                 </div>
                 <h5>Hello, Selamat Datang <strong id="username">Nama Akun</strong> di <strong>FeedMe.</strong></h5>
                 <h6>Mau pesan apa kak ?</h6>
