Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
                     </div>
                 </div>
                 </div>
-                <h5>Hello, Selamat Datang <strong id="username">Nama Akun</strong> di <strong>FeedMe.</strong></h5>
-                <h6>Mau pesan apa kak ?</h6>
+                <div class="row">
+                    <div class="col-12">
+                        <h5>Hello, Selamat Datang <strong id="username">Nama Akun</strong> di <strong>FeedMe.</strong></h5>
+                        <h6>Mau pesan apa kak ?</h6>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row mt-2">
