--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col-3">
-                        <div id="profilePictureDiv">
+                        <div class="profilePictureDiv"></div>   
                     </div>
                     <div class="col-9">
                         <strong id="username"></strong>
                     </div>
-                </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
