--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col-3">
-                        <div class="profilePictureDiv"></div>   
+                        <div id="profilePictureDiv"></div>   
                     </div>
                     <div class="col-9">
                         <strong id="username"></strong>
