--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col-3">
-                        <div id="profilePictureDiv"></div>   
-                    </div>
-                    <div class="col-9">
+                        <div id="profilePictureDiv" class="rounded-circle"></div>   
                         <strong id="username"></strong>
                     </div>
                 </div>
