--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div class="row">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-3">
-                        <div id="profilePictureDiv" class="rounded-circle"></div>   
+                    <div class="col-12">
+                        <div id="profilePictureDiv"></div>   
                         <strong id="username"></strong>
                     </div>
                 </div>
