--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                         <strong id="username"></strong>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mt-2">
                     <div class="col-12">
-                        <h5>Hello, Selamat Datang <strong id="username">Nama Akun</strong> di <strong>FeedMe.</strong></h5>
+                        <h5>Hello, Selamat Datang di <strong>FeedMe.</strong></h5>
                         <h6>Mau pesan apa kak ?</h6>
                     </div>
                 </div>
