Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body>
     <div class="container">        
+        <button id="liffLoginButton" class="btn btn-primary">Login</button>
+        <button id="liffLogoutButton" class="btn btn-warning">Logout</button>
+
         <div class="row">
             <div class="col-12">
                 <div class="row">
