Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <title>FeedMe!</title>
   </head>
   <body>
-    <div class="container">        
+    <div id="loginForm" class="container">
+        <button class="btn btn-primary">Login</button>
+    </div>
+    <div id="userHasLogin" class="container">        
         <button id="liffLoginButton" class="btn btn-primary">Login</button>
         <button id="liffLogoutButton" class="btn btn-warning">Logout</button>
 
