Menambahkan External Button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="loginForm" class="container">
-        <button class="btn btn-primary">Login</button>
+        <button id="liffLoginButton" class="btn btn-primary">Login</button>
     </div>
     <div id="userHasLogin" class="container">        
         <button id="liffLoginButton" class="btn btn-primary">Login</button>
