--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <div id="loginForm" class="container">
-        <button id="liffLoginButton" class="btn btn-primary">Login</button>
+        <p>Mohon untuk click login dibawah ini!</p>
+        <button id="liffLoginButton" class="btn btn-primary">LOGIN</button>
     </div>
     <div id="userHasLogin" class="container">        
         <div class="row">
@@ -55,6 +56,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <button id="openWindowButton" class="btn btn-outline-primary">Buka di browser</button>
+                <button id="logoutExternal" class="btn btn-outline-primary">LOGOUT</button>
             </div>
         </div>
     </div>
