--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col-12 text-center">
                 <button id="openWindowButton" class="btn btn-outline-primary">Buka di browser</button>
-                <button id="logoutExternal" class="btn btn-outline-primary">LOGOUT</button>
+                <button id="liffLogoutButton" class="btn btn-outline-danger">LOGOUT</button>
             </div>
         </div>
     </div>
